# MHY_Scanner

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Download.cpp  Download.h  Honkai3StreamQRCode.sln  Json.cpp  Json.h  LICENSE  Parser.cpp  Parser.h  README.md  Scan.cpp  Scan.h  config.json  ffmpeg opencv.cpp  main.cpp  main.h  utils.cpp  utils.h  v2api.cpp  v2api.h  vcpkg.json  源3.cpp
.github/workflows/: msbuild.yml  windows-build.yml
Honkai3StreamQRCode/: Bsgsdk.cpp  Bsgsdk.h  Download.cpp  Download.h  HmacSha256_.cpp  Honkai3StreamQRCode.vcxproj  Honkai3StreamQRCode.vcxproj.filters  Json.cpp  Json.h  Md5.cpp  Md5.h  Mihoyosdk.cpp  Mihoyosdk.h  Parser.cpp  Parser.h  Scan.cpp  Scan.h  Sha256.cpp  Sha256.h  ffmpeg opencv test.cpp  main.cpp  main.h  test.cpp  utils.cpp  utils.h  v2api.cpp  v2api.h
SSL/: Hmac.cpp  Hmac.h  HmacSha256.h  HmacSha2561.cpp  HmacSha2561.h  HmacSha256_.cpp  Md5.h  SSL.vcxproj  SSL.vcxproj.filters  Sha256.cpp  Sha256.h  hmac_sha256.cpp  main.cpp
Scan/: Scan.cpp  Scan.h  Scan.vcxproj  main.cpp
cmake/: build_QR-Code-generator.cmake  build_cpr.cmake  install_ffmpeg.cmake  install_nuget.cmake
doc/: Cookie.md  salt.json
scr/Honkai3StreamQRCode/: Honkai3StreamQRCode.vcxproj
scr/SSL/: HmacSha256.cpp  Md5.cpp  Sha256.h
scr/Scan/: Scan.vcxproj.filters
src/: CMakeLists.txt  Honkai3StreamQRCode.sln  MHY_Scanner.sln
src/BH3ScannerGui/: BH3ScannerGui.cpp  BH3ScannerGui.h  BH3ScannerGui.qrc  BH3ScannerGui.rc  BH3ScannerGui.ui  BH3ScannerGui.vcxproj  BH3ScannerGui.vcxproj.filters  LoginBili.cpp  LoginBili.h  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  ThreadDownload.cpp  ThreadDownload.h  ThreadGetScreen.cpp  ThreadGetScreen.h  ThreadLocalServer.cpp  ThreadLocalServer.h  ThreadSacn.cpp  ThreadSacn.h  ThreadStreamProcess.cpp  ThreadStreamProcess.h  main.cpp
src/BH3ScannerGui/Config/: config.json
src/BH3ScannerGui/Geetest/: geetest.html
src/Core/: ApiDefs.hpp  BH3Api.hpp  BSGameSDK.hpp  BiliBH3Api.hpp  BiliGameApi.cpp  BiliGameApi.h  CMakeLists.txt  Common.h  ConfigDate.cpp  ConfigDate.h  CookieParser.hpp  CreateUUID.hpp  CryptoKit.cpp  CryptoKit.h  HttpClient.cpp  HttpClient.h  LiveStreamLink.cpp  LiveStreamLink.h  MhyApi.hpp  Mihoyosdk.cpp  Mihoyosdk.h  OfficialApi.cpp  OfficialApi.h  QRScanner.h  ScannerBase.hpp  ScreenScan.cpp  ScreenShotDXGI.hpp  TimeStamp.hpp  UtilString.hpp  compile_string.hpp  trrlog.hpp
src/Geetest/: index.html
src/Honkai3StreamQRCode/: BiliGameApi.cpp  BiliGameApi.h  BiliLiveApi.cpp  BiliLiveApi.h  Bsgsdk.cpp  Bsgsdk.h  Config.cpp  Config.h  Core.cpp  Core.h  CryptoKit.cpp  CryptoKit.h  Download.cpp  Download.h  Honkai3StreamQRCode.vcxproj  Honkai3StreamQRCode.vcxproj.filters  HttpClient.cpp  HttpClient.h  Json.h  Login.cpp  Login.h  Main.cpp  Mihoyosdk.cpp  Mihoyosdk.h  QRScanner.cpp  QRScanner.h  Scan.h  ScreenScan.cpp  ScreenScan.h  Test.cpp  V2api.cpp  V2api.h  VideoProcessor.cpp  VideoProcessor.h  config.json  main.cpp  openssl1.cpp  utils.cpp  utils.h  v2api.cpp  (+1 more)
src/MHY_Scanner_Core/: BiliGameApi.cpp  BiliGameApi.h  CMakeLists.txt  Common.h  ConfigDate.cpp  ConfigDate.h  CryptoKit.cpp  CryptoKit.h  HttpClient.cpp  HttpClient.h  LiveBili.cpp  LiveBili.h  LiveHuya.cpp  LiveHuya.h  LiveStreamLink.cpp  LiveStreamLink.h  MhyApi.hpp  Mihoyosdk.cpp  Mihoyosdk.h  OfficialApi.cpp  OfficialApi.h  QRScanner.cpp  QRScanner.h  ScreenScan.h  ScreenShotDXGI.hpp  UtilString.hpp  VideoProcessor.cpp  VideoProcessor.h  trrlog.hpp
src/MHY_Scanner_Gui/: About_QDialog.cpp  About_QDialog.h  CMakeLists.txt  LoginBili.cpp  LoginBili.h  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  QRCodeForScreen.cpp  QRCodeForScreen.h  QRCodeForStream.cpp  QRCodeForStream.h  ScannerGui.cpp  ScannerGui.h  ScannerGui.ui  ThreadDownload.cpp  ThreadDownload.h  ThreadGetScreen.cpp  ThreadGetScreen.h  ThreadLocalServer.cpp  ThreadSacn.cpp  ThreadSacn.h  ThreadStreamProcess.cpp  ThreadStreamProcess.h  UtilMat.hpp  WindowAbout.cpp  WindowAbout.h  WindowGeeTest.cpp  WindowGeeTest.h  WindowLogin.cpp  WindowLogin.h  main.cpp
src/Resources/: MHY_Scanner.qrc  MHY_Scanner.rc  ScannerGui.qrc
src/SSL/: Hmac.cpp  HmacSha256.cpp  HmacSha256.h  HmacSha256.hpp  SSL.vcxproj  SSL.vcxproj.filters  hmac_sha256.cpp
src/Scan/: Scan.cpp  Scan.h  Scan.vcxproj  Scan.vcxproj.filters  ScreenScan.cpp  ScreenScan.h  main.cpp
src/ScannerCore/: BiliGameApi.cpp  BiliGameApi.h  BiliLiveApi.h  CryptoKit.cpp  CryptoKit.h  HttpClient.cpp  HttpClient.h  LiveBili.cpp  LiveBili.h  Mihoyosdk.cpp  Mihoyosdk.h  OfficialApi.cpp  OfficialApi.h  QRScanner.cpp  QRScanner.h  ScannerCore.vcxproj  ScannerCore.vcxproj.filters  VideoProcessor.cpp  VideoProcessor.h
src/ScannerGui/: LoginBili.cpp  LoginBili.h  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  ScannerGui.cpp  ScannerGui.h  ScannerGui.rc  ScannerGui.ui  ScannerGui.vcxproj  ScannerGui.vcxproj.filters  ThreadDownload.cpp  ThreadDownload.h  ThreadGetScreen.cpp  ThreadGetScreen.h  ThreadLocalServer.cpp  ThreadLocalServer.h  ThreadSacn.cpp  ThreadSacn.h  ThreadStreamProcess.cpp  ThreadStreamProcess.h  main.cpp
src/ScannerGui/Config/: config.json  config0.json
src/Tests/: Tests.vcxproj
src/TrrJson/: CMakeLists.txt  Json.cpp  Json.h  Parser.cpp  Parser.h  TrrJson.hpp  TrrJson.vcxproj  TrrJson.vcxproj.filters
src/UI/: CMakeLists.txt  LoginWindow.cpp  LoginWindow.ui  QRCodeForScreen.cpp  QRCodeForScreen.h  QRCodeForStream.cpp  QRCodeForStream.h  ScannerGui.h  ThreadLocalServer.cpp  ThreadLocalServer.h  WindowAbout.cpp  WindowGeeTest.cpp  WindowGeeTest.h  WindowLogin.cpp  WindowLogin.h  WindowMain.cpp  WindowMain.h  WindowMain.ui  main.cpp
test/: test_Download.cpp  test_Download.h  test_Login.cpp  test_Main.cpp  test_Test.cpp
tests/: CMakeLists.txt  test_core.cpp  test_gui.cpp  test_streamlink.cpp  test_video.cpp  test_video_hw.cpp
